tests/parser/twrongcmdsyntax.nim
discard """
  errormsg: '''identifier expected, but found 'echo 4'''
  line: 6
"""

echo 4 +2
